--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ example_client/mse_example/package-lock.json
 example_client/hls_example/node_modules
 example_client/hls_example/.nuxt
 example_client/hls_example/package-lock.json
+build.sh
+cmd/video_server/linux-video_server.zip
+cmd/video_server/windows-video_server.zip
